<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cozmix</string>
    <string name="organisation_name">Cozmix</string>
    <string name="organisation_catchphrase">Ruimte voor verwondering</string>
    <string name="cozmix_website">http://cozmix.be/</string>
    <string name="cozmix_email_address">info@cozmix.be</string>
    <string name="feedback_email_subject">Feedback app planetenpad</string>
    <string name="btn_txt_add">Toevoegen</string>
    <string name="btn_txt_delete">Verwijderen</string>
    <string name="nav_introduction">Introductie</string>
    <string name="nav_planetenpad">Planetenpad</string>
    <string name="nav_support">Meer info</string>
    <string name="nav_website_cozmix">Website Cozmix</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_weight">Zwaartekracht</string>
    <string name="navigation_trivia">Weetjes</string>
    <string name="planetenpad_background_contentDescription">Introductie</string>
    <string name="planetarium_background_contentDescription">Planetarium</string>
    <string name="logo_contentDescription">Logo</string>
    <string name="planet_background_contentDescription">Planeet</string>
    <string name="planet_contentDescription">Planeet</string>
    <string name="planet_probe_contentDescription">Sonde</string>
    <string name="planet_statue_contentDescription">Standbeeld</string>
    <string name="astronaut_contentDescription">Astronaut</string>
    <string name="manage_astronauts_title">Astronauten</string>
    <string name="create_astronaut_title">Nieuwe astronaut</string>
    <string name="delete_astronaut_title">Verwijder astronaut</string>
    <string name="edit_astronaut_hint_name">Naam</string>
    <string name="edit_astronaut_hint_weight">Gewicht</string>
    <string name="text_empty_astronaut_list">Voeg astronauten toe met de knop hieronder</string>
    <string name="weight_subtitle" tools:keep="@string/weight_subtitle">Hoeveel zou jij wegen op %1$s?</string>
    <string name="text_empty_weight_list">Voeg astronauten toe met de knop rechtsonder</string>
    <string name="trivia_moons">Aantal manen</string>
    <string name="trivia_temperature">Temperatuur</string>
    <string name="trivia_length_day">Lengte van een dag</string>
    <string name="trivia_orbital_period">Omlooptijd</string>
    <string name="trivia_travel_time_sun">Vliegtuigvlucht (800 km/h) naar de zon</string>
    <string name="introduction_text">
        <![CDATA[
            <p>Deze handige app maakt je reis langs het planetenpad van Cozmix interactief!</p>
            <p>Op het prachtige domein Beisbroek dat rondom het bezoekerscentrum Cozmix gelegen is, kan je een wandeling maken doorheen een schaalmodel van het zonnestelsel. De planeten worden voorgesteld door sculpturen van Jef Claerhout.</p>
            <p>Elke stap die je zet komt overeen met 9 miljoen kilometer! Het planetenpad vertrekt voor de ingang van Cozmix en het natuurcentrum, ter hoogte van de zon, naast de zonnewijzer. De werkelijke afstand is 835 meter en brengt je langs alle planeten, de planetoïdengordel, Pluto en de IJsdwergen. Wandel langs het planetenpad en ervaar dat de afstand van de zon naar Neptunus 30 keer de afstand aarde - zon is!</p>
            <p>Niet alleen de afstand tussen de planeten is op schaal voorgesteld, maar ook de grootte van de planeten. Deze schaal is een andere dan die van de afstanden, aangezien de planeten anders minuscule bolletjes zouden zijn. Hier komt 10 centimeter overeen met 18000 kilometer. Elke planeet wordt daarnaast ook voorgesteld door haar mythologische figuur. Zo wordt de planeet Venus bijvoorbeeld weergegeven door de Godin van de Liefde. Zin in deze trektocht doorheen het zonnestelsel?</p>
        ]]>
    </string>
    <string name="introduction_start">Start de wandeling!</string>
    <string name="zon_name" tools:keep="@string/zon_name">de zon</string>
    <string name="zon_description" tools:keep="@string/zon_description">De zon is een doodgewone ster, net zoals de vele andere die we \'s nachts aan de hemel kunnen zien. Er zijn sterren die groter zijn en er zijn sterren die kleiner zijn dan onze zon. \n Maar in vergelijking met de planeten is de zon gigantisch groot. In de schaal die we hier gebruiken, zou ze een diameter van 8 m hebben, zowat half zo groot als het pleintje voor het kasteel. \n Aan de buitenkant heeft ze een verschroeiende temperatuur van 6000 °C maar naar het midden, loopt dit op tot een onvoorstelbare 15 miljoen °C. Deze hitte zorgt ervoor dat waterstof in de zon versmelt tot helium en hierbij komt een enorme hoeveelheid energie vrij. \n Dankzij deze energie kan het leven op aarde in stand gehouden worden. De zon bevat voldoende waterstof om het nog zo"n vijf miljard jaar uit te houden.\n  </string>
    <string name="zon_statue_name" tools:keep="@string/zon_statue_name">Vuurvogel</string>
    <string name="zon_statue_description" tools:keep="@string/zon_statue_description">De zon wordt hier voorgesteld door de Vuurvogel. Dit is de mythische feniks, de vogel die zichzelf in vuur liet ten onder gaan om vervolgens te verrijzen uit zijn eigen as. Hierdoor is ze een symbool voor onsterfelijkheid, wederopstanding en het leven na de dood. Wanneer de vogel zijn einde voelt naderen, bouwt hij zich een nest met de fijnste aromatische houtsoorten, steekt dit in brand en wordt verteerd in de vlammen. Hieruit komt dan een nieuwe feniks tevoorschijn, vol van jeugdige kracht.  </string>
    <string name="zon_moons" tools:keep="@string/zon_moons">/</string>
    <string name="zon_temperature" tools:keep="@string/zon_temperature">5505°C</string>
    <string name="zon_length_day" tools:keep="@string/zon_length_day">27 dagen</string>
    <string name="zon_orbital_period" tools:keep="@string/zon_orbital_period">/</string>
    <string name="zon_travel_time_sun" tools:keep="@string/zon_travel_time_sun">/</string>
    <string name="zon_gravity" tools:keep="@string/zon_gravity">27.94</string>
    <string name="mercurius_name" tools:keep="@string/mercurius_name">Mercurius</string>
    <string name="mercurius_description" tools:keep="@string/mercurius_description">Omdat Mercurius van alle planeten het dichtst bij de zon staat, heeft ze ook het minst tijd nodig voor een jaarbeweging. De baan is sterk elliptisch: de afstand tot de zon varieert daarom van 45 tot 70 miljoen kilometer.\nOmdat de planeet driemaal om haar as draait in dezelfde tijd die ze nodig heeft om twee keer om de zon te draaien, zijn er aan het oppervlak vreemde verschijnselen te zien. Op bepaalde plaatsen kan het zijn dat de zon twee keer per dag opkomt! De vreemde baan, de nabijheid bij de zon en het ontbreken van een atmosfeer zorgen ervoor dat de dagtemperatuur kan oplopen tot 430 graden Celsius.\n"s Nachts kan het dan weer afkoelen tot min 180 graden Celsius. Radarwaarnemingen tonen zelfs aan dat er in diepe kraters aan de polen mogelijk bevroren waterijs voorkomt.</string>
    <string name="mercurius_statue_name" tools:keep="@string/mercurius_statue_name">De behendige boodschapper</string>
    <string name="mercurius_statue_description" tools:keep="@string/mercurius_statue_description">Mercurius is de god van de handelaars en boodschapper van de goden. Daarnaast heeft hij nog een bijbaantje als god van de welsprekendheid, de uitvindingen, reizigers en dieven. De vleugeltjes aan zijn hoed en schoenen illustreren zijn taak als ijlbode of om zich als god van de dieven vlug uit de voeten te kunnen maken.\nHet lievelingsdier van Mercurius was de haan, een dier dat ook bekend staat om zijn functie als boodschapper. Denk maar aan het Bijbelverhaal waar de haan drie maal kraaide om één en ander duidelijk te maken. Mercurius was nog maar net geboren, of hij ging al aan de haal met een kudde koeien van Apollo.\nUit de ingewanden van de dieren fabriceerde hij de lier en kon het zo toch nog goed maken met de woedende Apollo.</string>
    <string name="mercurius_moons" tools:keep="@string/mercurius_moons">0</string>
    <string name="mercurius_temperature" tools:keep="@string/mercurius_temperature">-180°C tot 430°C</string>
    <string name="mercurius_length_day" tools:keep="@string/mercurius_length_day">58 dagen 15 uur</string>
    <string name="mercurius_orbital_period" tools:keep="@string/mercurius_orbital_period">88 dagen</string>
    <string name="mercurius_travel_time_sun" tools:keep="@string/mercurius_travel_time_sun">8 jaar</string>
    <string name="mercurius_gravity" tools:keep="@string/mercurius_gravity">0.38</string>
    <string name="venus_name" tools:keep="@string/venus_name">Venus</string>
    <string name="venus_description" tools:keep="@string/venus_description">Venus wordt ook wel eens de zusterplaneet van de aarde genoemd. Wat grootte en samenstelling betreft, vertonen beide planeten inderdaad enige overeenkomst. Venus is net als Mercurius een zogenaamde binnenplaneet. Ze beweegt dichter bij de zon dan de aarde en daarom kunnen we haar enkel in de buurt van de zon zien. Het meest verbazende aan de gesluierde planeet is haar dichte atmosfeer.\nDeze bestaat voor het grootste deel uit CO2. Dit houdt de zonnestraling vast waardoor er aan het oppervlak een uit de hand gelopen broeikaseffect optreedt. De temperaturen kunnen hier zelfs hoger oplopen dan bij Mercurius. De luchtdruk is even groot als de druk op duizend meter diepte in een aardse oceaan. Waarnemingen van 10 tot 15 jaar geleden, vertellen ons dat er vulkanisme op Venus voorkwam, misschien zelfs nog tot op de dag van vandaag.</string>
    <string name="venus_statue_name" tools:keep="@string/venus_statue_name">Godin van de liefde</string>
    <string name="venus_statue_description" tools:keep="@string/venus_statue_description">Venus is algemeen gekend als de godin van de liefde. Maar zoals bij vele verhalen uit de oude mythologie, is ze allesbehalve voortgekomen uit liefde. Het verhaal vertelt hoe Chronos, de Griekse Saturnus, in een verschrikkelijke strijd met zijn vader Oceanus verwikkeld was. Met de sikkel die hij van zijn moeder Gaia gekregen had, ontmande Saturnus zijn eigen vader.\nHij wierp het afgesneden lichaamsdeel in de oceaan en het nog aanwezige zaad verspreidde zich uiteindelijk in een cirkel van wit schuim. Uit dit schuim werd tenslotte Venus geboren. Haar Griekse naam, Aphrodite, betekent letterlijk "uit schuim geboren". Hoewel haar voornaamste werkterrein het "zoete der liefde" is, heeft zij toch evenveel miserie en bloedvergieten veroorzaakt als veel van de andere onsterfelijken.</string>
    <string name="venus_moons" tools:keep="@string/venus_moons">0</string>
    <string name="venus_temperature" tools:keep="@string/venus_temperature">460°C</string>
    <string name="venus_length_day" tools:keep="@string/venus_length_day">243 dagen</string>
    <string name="venus_orbital_period" tools:keep="@string/venus_orbital_period">225 dagen</string>
    <string name="venus_travel_time_sun" tools:keep="@string/venus_travel_time_sun">15 jaar</string>
    <string name="venus_gravity" tools:keep="@string/venus_gravity">0.91</string>
    <string name="aarde_name" tools:keep="@string/aarde_name">Aarde</string>
    <string name="saturnus_moons" tools:keep="@string/saturnus_moons">64</string>
    <string name="saturnus_temperature" tools:keep="@string/saturnus_temperature">-130°C</string>
    <string name="saturnus_length_day" tools:keep="@string/saturnus_length_day">10u39m</string>
    <string name="saturnus_orbital_period" tools:keep="@string/saturnus_orbital_period">29 jaar 5 maanden 16 dagen</string>
    <string name="saturnus_travel_time_sun" tools:keep="@string/saturnus_travel_time_sun">203 jaar</string>
</resources>