<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="90dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/weetjes_manen"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/trivia_moons"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturnus_moons"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/weetjes_temp"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/trivia_temperature"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/saturnus_temperature"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/weetjes_dagnacht"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/trivia_length_day"
                android:textSize="20dp" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:text="@string/saturnus_length_day"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/weetjes_omlooptijd"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/trivia_orbital_period"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturnus_orbital_period"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/weetjes_vliegtuig"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/trivia_travel_time_sun"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturnus_travel_time_sun"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>













    </LinearLayout>
</RelativeLayout>