<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <!-- TODO: check relevant text sizes -->
    <!-- TODO: check compatibility with android kitkat - API 19 -->
    <!-- TODO: adjust strings to be more reusable throughout different planets -->
    <!-- TODO: titel toevoegen (in overeenstemming met gewicht-pagina en home-pagina -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:useDefaultMargins="true">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/weetjes_manen"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/trivia_moons" />
        <TextView
            android:id="@+id/planet_moons"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/weetjes_temp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/trivia_temperature" />
        <TextView
            android:id="@+id/planet_temperature"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/weetjes_dagnacht"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/trivia_length_day" />
        <TextView
            android:id="@+id/planet_length_day"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/weetjes_omlooptijd"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/trivia_orbital_period" />
        <TextView
            android:id="@+id/planet_orbital_period"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:src="@drawable/weetjes_vliegtuig"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/trivia_travel_time_sun" />
        <TextView
            android:id="@+id/planet_travel_time_sun"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:gravity="center" />

    </GridLayout>
</android.support.v4.widget.NestedScrollView>