<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/planet_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_margin"
            android:contentDescription="@string/planet_contentDescription" />

        <TextView
            android:id="@+id/planet_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:lineSpacingMultiplier="@dimen/line_spacer_multiplier_body"
            android:layout_marginTop="@dimen/activity_margin" />

        <ImageView
            android:id="@+id/planet_probe_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:contentDescription="@string/planet_probe_contentDescription" />

        <TextView
            android:id="@+id/planet_statue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:textSize="@dimen/text_title" />

        <ImageView
            android:id="@+id/planet_statue_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_margin"
            android:contentDescription="@string/planet_statue_contentDescription" />

        <TextView
            android:id="@+id/planet_statue_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_body"
            android:lineSpacingMultiplier="@dimen/line_spacer_multiplier_body"
            android:layout_marginTop="@dimen/activity_margin" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>